CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(mkpdf C)

IF(NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/lib/stage)
    FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib/build)
    EXECUTE_PROCESS(
        COMMAND ${CMAKE_COMMAND} ..
        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib/build
    )
    EXECUTE_PROCESS(
        COMMAND ${CMAKE_COMMAND} --build .
        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib/build
    )
ENDIF()

LIST(APPEND CMAKE_PREFIX_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib/stage)

ADD_SUBDIRECTORY(src)
