FIND_PACKAGE(lua REQUIRED)
FIND_PACKAGE(ZLIB REQUIRED)
FIND_PACKAGE(PNG REQUIRED)
FIND_PACKAGE(luahpdf REQUIRED)

FIND_LIBRARY(hpdfs hpdfs)

ADD_EXECUTABLE(bin2c bin2c.c)

ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/mkpdf.lua.c
    COMMAND bin2c ${CMAKE_CURRENT_SOURCE_DIR}/mkpdf.lua ${CMAKE_CURRENT_BINARY_DIR}/mkpdf.lua.c
    DEPENDS mkpdf.lua
)

ADD_EXECUTABLE(mkpdf main.c ${CMAKE_CURRENT_BINARY_DIR}/mkpdf.lua.c)

TARGET_LINK_LIBRARIES(mkpdf PRIVATE luahpdf lua ${hpdfs} ZLIB::ZLIB PNG::PNG)

TARGET_INCLUDE_DIRECTORIES(mkpdf PRIVATE ${PROJECT_SOURCE_DIR}/lib/stage/include)
